--- a/server/templates/simulation.html
+++ b/server/templates/simulation.html
@@ -7,11 +7,12 @@
 <div id="simulation_wrap">
   <div id="simulation_draw">
     <div id="simulation_main_draw">
-      <div id="Static">
+      <div id="Static" class="glass">
         <div><span>Static</span></div>
+        <div id="Static_main"></div>
       </div> <!-- end of simulation_static -->
 
-      <div id="Dynamic" class="draw_item">
+      <div id="Dynamic" class="draw_item glass">
         <div><span>Dynamic</span></div>
         <div class="dynamic_box">
           <i id="show_dynamic_box"  class="search icon"></i>
@@ -23,9 +24,9 @@
 
   <div id="simulation_adjust">
     <div id="simulation_circuit">
-      <div class="ui teal inverted menu">
-      </div>
+      <div class="ui teal inverted menu"></div>
       <div id="simulation_circuit_main">
+        <div id="logic_box"></div>
       </div>
     </div> <!-- end of simulation_circuit -->
 
@@ -42,25 +43,25 @@
               <div class="part_img">
                 <img src="/static/images/simulation/promoter2.png">
               </div>
-              <p>name</p>
+              <p>BBa_K864600</p>
             </div>
             <div class="part">
               <div class="part_img">
                 <img src="/static/images/simulation/RBS2.png">
               </div>
-              <p>name</p>
+              <p>BBa_B0034</p>
             </div>
             <div class="part">
               <div class="part_img">
                 <img src="/static/images/simulation/Coding-sequence22.png">
               </div>
-              <p>name</p>
+              <p>BBa_E1010</p>
             </div>
             <div class="part">
               <div class="part_img">
                 <img src="/static/images/simulation/Terminator2.png">
               </div>
-              <p>name</p>
+              <p>BBa_K864600</p>
             </div>
           </td>
           <td><input type="range" min="0.00" max="1.00" step="0.1"></td>
@@ -72,25 +73,25 @@
               <div class="part_img">
                 <img src="/static/images/simulation/promoter2.png">
               </div>
-              <p>name</p>
+              <p>BBa_K346002</p>
             </div>
             <div class="part">
               <div class="part_img">
                 <img src="/static/images/simulation/RBS2.png">
               </div>
-              <p>name</p>
+              <p>BBa_B0034</p>
             </div>
             <div class="part">
               <div class="part_img">
                 <img src="/static/images/simulation/Coding-sequence22.png">
               </div>
-              <p>name</p>
+              <p>BBa_K1014000</p>
             </div>
             <div class="part">
               <div class="part_img">
                 <img src="/static/images/simulation/Terminator2.png">
               </div>
-              <p>name</p>
+              <p>BBa_K864600</p>
             </div>
           </td>
           <td><input type="range" min="0.00" max="1.00" step="0.1"></td>
@@ -102,25 +103,25 @@
               <div class="part_img">
                 <img src="/static/images/simulation/promoter2.png">
               </div>
-              <p>name</p>
+              <p>BBa_K346002</p>
             </div>
             <div class="part">
               <div class="part_img">
                 <img src="/static/images/simulation/RBS2.png">
               </div>
-              <p>name</p>
+              <p>BBa_B0034</p>
             </div>
             <div class="part">
               <div class="part_img">
                 <img src="/static/images/simulation/reporter.png">
               </div>
-              <p>name</p>
+              <p>BBa_K1014001</p>
             </div>
             <div class="part">
               <div class="part_img">
                 <img src="/static/images/simulation/Terminator2.png">
               </div>
-              <p>name</p>
+              <p>BBa_K864600</p>
             </div>
           </td>
           <td><input type="range" min="0.00" max="1.00" step="0.1"></td>
