--- a/server/templates/shape.html
+++ b/server/templates/shape.html
@@ -7,11 +7,11 @@
 {%block content %}
 <div class="ui segment blackglass" id="information">
     <div class="ui button hide"><i class="remove icon"></i></div>
-    <div class="ui ribbon label title">Part_id</div>
+    <div class="ui red label title">Part_id</div>
     <p name="pid"><p>
-    <div class="ui ribbon label title">Part_short_name</div>
+    <div class="ui red label title">Part_short_name</div>
     <p name="sname"><p>
-    <div class="ui ribbon label title">Part_short_desc</div>
+    <div class="ui red label title">Part_short_desc</div>
     <p name="desc"><p>
 </div>
 <div class="teal ui four fluid buttons" id="change">
