--- a/server/templates/simulation.html
+++ b/server/templates/simulation.html
@@ -16,7 +16,7 @@
                 <div class="ui red label">Dynamic</div>
                 <div class="dynamic_box">
                     <i id="show_dynamic_box"  class="search icon"></i>
-                    <div id="graph3"></div>
+                    <div class="ui segment blackglass" id="graph3"></div>
                 </div>
             </div> <!-- end of simulation_dynamic -->
         </div> <!-- end of simulation_main_draw -->
@@ -131,10 +131,9 @@
     </div> <!-- end of simulation_adjust -->
 </div> <!-- end of simulation_wrap -->
 
-<div class="ui modal" id="draw_modal">
+<div class="ui basic modal" id="draw_modal">
+    <div class="ui segment glass content" id="modal_content">
     <i class="close icon"></i>
-    <div class="header"></div>
-    <div class="content" id="modal_content">
         <div class="left" id="showgraph"></div>
         <div class="right" id="modal_right">
             <div id="static_adjust_box">
