--- a/server/static/css/simulation.css
+++ b/server/static/css/simulation.css
@@ -1,328 +1,345 @@
-* {
-  margin: 0;
-  padding: 0;
-}
+/* {
+margin: 0;
+padding: 0;
+}*/
 
 #simulation_wrap {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 #simulation_draw {
-  height: 60%;
-  width: 100%;
+    /*height: 60%;*/
+    height:500px;
+    width: 100%;
 }
 
 #simulation_adjust {
-  height: 40%;
-  width: 100%;
+    height: 40%;
+    width: 100%;
 }
 
 #simulation_main_draw {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  position: relative;
-  left: 0; top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+    left: 0; top: 0;
 }
 
 #simulation_main_draw>div {
-  width: 80%;
-  height: 85%;
-  border: 1px solid gray;
-  overflow: hidden;
-  background-color: #eee;
-  position: absolute;
+    width: 80%;
+    height: 85%;
+    overflow: hidden;
+    position: absolute;
 }
 
 #Dynamic {
-  top: 2%;
-  left: 15%;
-  z-index: 1;
-  opacity: 0.5;
+    top: 2%;
+    left: 15%;
+    z-index: 1;
+    opacity: 0.5;
+}
+
+#Dynamic > .label {
+    float:left;
 }
 
 #Static {
-  top: 12%;
-  left: 1%;
-  z-index: 2;
-  opacity: 1;
+    top: 12%;
+    left: 1%;
+    z-index: 2;
+    opacity: 1;
+}
+
+#Static > .label {
+    float:left;
 }
 
 
 .static_box, .dynamic_box {
-  position: relative;
-  left: 0; top: 0;
+    position: relative;
+    left: 0; top: 0;
 }
 
 .static_box i, .dynamic_box i {
-  position: absolute;
-  top: 10px; right: 10px;
-  z-index: 5;
-  font-size: 20px;
-  opacity: 0.6;
+    position: absolute;
+    top: 10px; right: 10px;
+    z-index: 5;
+    font-size: 20px;
+    opacity: 0.6;
+    color:gray;
 }
 
 .static_box i:hover, .dynamic_box i:hover {
-  color: #009FDA;
-  transform: scale(1.5);
-}
-
-#Static>div:first-child, #Dynamic>div:first-child {
-  height: 25px;
-  padding: 5px 0 0 5px;
+    color: #00B5AD;
+    transform: scale(1.5);
 }
 
 #Static span, #Dynamic span {
-  font-size: 20px;
-  font-weight: bold;
-  border: 1px black solid;
+    font-size: 20px;
+    font-weight: bold;
+    border: 1px black solid;
 }
 
 #simulation_circuit {
-  height: 100%;
-  width: 40%;
-  float: left;
+    height: 100%;
+    width: 40%;
+    float: left;
 }
 
 #simulation_circuit .ui.teal.inverted.menu {
-  width: 255px;
-  height: 15%;
-  background-color: transparent;
-  margin: 0;
+    width: 255px;
+    height: 15%;
+    background-color: transparent;
+    margin: 0;
 }
 
 #simulation_circuit_main {
-  width: 100%;
-  height: 85%;
+    width: 100%;
+    height: 85%;
 }
 
 #logic_box {
-  width: 45%;
-  height: 80%;
-  overflow-y: auto;
-  margin: auto;
-  margin-top: 2%;
+    width: 45%;
+    height: 80%;
+    overflow-y: auto;
+    margin: auto;
+    margin-top: 2%;
 }
 
 .logic_item {
-  height: 98%;
-  width: 98%;
-  border: #10cdcc 2px solid;
-  border-radius: 5px;
-  overflow: hidden;
+    height: 98%;
+    width: 98%;
+    border: #10cdcc 2px solid;
+    border-radius: 5px;
+    overflow: hidden;
 }
 
 .logic_item img {
-  height: 85%;
-  width: 100%;
+    height: 85%;
+    width: 100%;
 }
 
 .logic_item p {
-  width: 100%;
-  height: 15%;
-  color: rgba(0, 0, 0, 0.65);
-  text-align: center;
-  font-size: 18px;
-  padding: 2%;
-  background-color: rgba(157, 183, 187, 1);
+    width: 100%;
+    height: 15%;
+    color: rgba(0, 0, 0, 0.65);
+    text-align: center;
+    font-size: 18px;
+    padding: 2%;
+    background-color: rgba(157, 183, 187, 1);
 }
 
 #simulation_circuit .ui.teal.inverted.menu>a {
-  width: 33%;
-  background-color: rgba(0, 181, 174, 0.7);
+    width: 33%;
+    background-color: rgba(0, 181, 174, 0.7);
 }
 
 
 #simulation_circuit .ui.teal.inverted.menu>a.item.active {
-  background-color: rgb(0, 181, 174);
+    background-color: rgb(0, 181, 174);
 }
 
 #simulation_adjust_main {
-  height: 100%;
-  width: 60%;
-  float: left;
-  overflow-y: auto;
+    height: 100%;
+    width: 60%;
+    float: left;
+    overflow-y: auto;
 }
 
 #simulation_adjust_main table {
-  width: 90%;
-  height: 100%;
+    width: 90%;
+    height: 100%;
 }
 
 #simulation_adjust_main tr {
-  width: 100%;
+    width: 100%;
 }
 
 #simulation_adjust_main th {
-  text-align: center;
+    text-align: center;
 }
 
 #simulation_adjust_main th:first-child {
-  width: 80%;
+    width: 80%;
 }
 
 .part {
-  float: left;
-  margin-right: 5%;
-  text-align: center;
-  position: relative;
-  left: 0; top: 0;
+    float: left;
+    margin-right: 5%;
+    text-align: center;
+    position: relative;
+    left: 0; top: 0;
 }
 
 .part_img {
-  width: 60px;
-  height: 60px;
-  margin-bottom: 5%;
+    width: 60px;
+    height: 60px;
+    margin-bottom: 5%;
 }
 
 .part p {
-  border: 1px solid black;
+    border: 1px solid black;
 }
 
 .part_line {
-  width: 100%;
+    width: 100%;
 }
 
 .part_line td:first-child {
-  width: 80%;
+    width: 80%;
 }
 
 .mid_line {
-  height: 5px;
-  width: 70%;
-  background-color: black;
-  position: relative;
-  left: 30px;
-  top: 34px;
+    height: 5px;
+    width: 70%;
+    background-color: black;
+    position: relative;
+    left: 30px;
+    top: 34px;
 }
 
 #Static_main {
-  width: auto;
-  height: 100%;
+    width: auto;
+    height: 100%;
 }
 
 .static_box {
-  float: left;
-  width: 450px;
-  margin: 0 3% 0 3%;
+    float: left;
+    width: 450px;
+    margin: 0 3% 0 3%;
+}
+
+.search.icon {
+    position:absolute;
+    right:10px;
+    top:30px;
 }
 
 .dynamic_box {
-  width:  770px;
-  margin: auto;
+    margin: auto;
+    float:left;
 }
 
 .adjust_box {
-  border: 1px solid gray;
-  text-align: center;
+    border: 1px solid gray;
+    text-align: center;
 }
 
 .adjust_box th {
-  font-size: 10px;
+    font-size: 10px;
 }
 
 .part_img img {
-  height: 100%;
-  width: 100%;
+    height: 100%;
+    width: 100%;
 }
 
 
 #showgraph {
-  width: 65%;
+    width: 65%;
 }
 
 .right fieldset {
-  width: 230px;
+    width: 230px;
 }
 
 .right fieldset {
-  padding: 5%;
-  margin: 5%;
+    padding: 5%;
+    margin: 5%;
 }
 
 .right fieldset>div {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 .right fieldset>div>span, .right fieldset>div>input {
-  float: left;
+    float: left;
 }
 
 #draw_modal {
-  width: 80%;
-  background-color: #F4F4F4;
+    width: 80%;
 }
 
 #modal_content {
-  padding: 10px;
+    padding: 10px;
+}
+
+#modal_content > i {
+    position:absolute;
+    top:2px;
+    right:0;
+}
+
+#modal_content > i:hover {
+    color:#00B5AD;
+    cursor:pointer;
 }
 
 #modal_right {
-  padding: 0;
+    padding: 0;
 }
 
 #static_adjust_box,
 #dynamic_adjust_box {
-  display:  none;
+    display:  none;
 }
 
 #static_adjust_box h3,
 #dynamic_adjust_box h3 {
-  margin: 10px;
-  text-align: center;
+    margin: 10px;
+    text-align: center;
 }
 
 .input_range {
-  height:  20px;
-  position: relative;
+    height:  20px;
+    position: relative;
 }
 
 .input_range *:not(output) {
-  display: block;
-  float:  left;
-  height: 100%;
+    display: block;
+    float:  left;
+    height: 100%;
 }
 
 
 output {
-  position: absolute;
-  opacity: 0.7;
-  background-image: -moz-linear-gradient(top, #444444, #999999);
-  background-image: -o-linear-gradient(top, #444444, #999999);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#444444), to(#999999));
-  background-image: -webkit-linear-gradient(top, #444444, #999999);
-  width: 40px;
-  height: 30px;
-  text-align: center;
-  color: white;
-  border-radius: 10px;
-  display:  none;
-  font: bold 15px/30px Georgia;
-  bottom: 180%;
-  left: 0;
-  margin-left: -1%;
-  z-index: 99999;
+    position: absolute;
+    opacity: 0.7;
+    background-image: -moz-linear-gradient(top, #444444, #999999);
+    background-image: -o-linear-gradient(top, #444444, #999999);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#444444), to(#999999));
+    background-image: -webkit-linear-gradient(top, #444444, #999999);
+    width: 40px;
+    height: 30px;
+    text-align: center;
+    color: white;
+    border-radius: 10px;
+    display:  none;
+    font: bold 15px/30px Georgia;
+    bottom: 180%;
+    left: 0;
+    margin-left: -1%;
+    z-index: 99999;
 }
 
 output:after {
-  content: "";
-  position: absolute;
-  width: 0;
-  height: 0;
-  border-top: 10px solid #999999;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  margin-top: -1px;
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-top: 10px solid #999999;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    margin-top: -1px;
 }
 
 .s_graph {
-  width: 450px;
-  height: 300px;
-  float: left;
+    float: left;
 }
 
 
