--- a/server/templates/shape.html
+++ b/server/templates/shape.html
@@ -7,11 +7,11 @@
 {%block content %}
 <div class="ui segment blackglass" id="information">
     <div class="ui button hide"><i class="remove icon"></i></div>
-    <div class="ui red label title">Part_id</div>
+    <div class="ui ribbon label title">Part_id</div>
     <p name="pid"><p>
-    <div class="ui red label title">Part_short_name</div>
+    <div class="ui ribbon label title">Part_short_name</div>
     <p name="sname"><p>
-    <div class="ui red label title">Part_short_desc</div>
+    <div class="ui ribbon label title">Part_short_desc</div>
     <p name="desc"><p>
 </div>
 <div class="teal ui four fluid buttons" id="change">
@@ -20,7 +20,7 @@
     <div class="ui button" name="vector">Vector</div>
     <div class="ui button" name="dna">DNA</div>
 </div>
-<div id="slider"></div>
+<div id="slider"><i></i><i></i></div>
 <div class="ui basic modal" id="progress">
     <div class="content">
         <div class="center">
@@ -75,9 +75,9 @@
             <div class="content">
                 <div class="center">
                     <div class="ui segment container">
-                        <div class="ui segment part"><div class="part-container"><div id="input"></div></div><div class="ui ribbon label title">Input</div></div>
-                        <div class="ui segment part"><div class="part-container"><div id="gene"></div></div><div class="ui ribbon label title">Gene</div></div>
-                        <div class="ui segment part"><div class="part-container"><div id="output"></div></div><div class="ui ribbon label title">Output</div></div>
+                        <div class="ui segment part"><div class="part-container"><div id="input"></div></div><div class="ui red label title">Input</div></div>
+                        <div class="ui segment part"><div class="part-container"><div id="gene"></div></div><div class="ui red label title">Gene</div></div>
+                        <div class="ui segment part"><div class="part-container"><div id="output"></div></div><div class="ui red label title">Output</div></div>
                     </div>
                 </div>
             </div>
