--- a/server/templates/simulation.html
+++ b/server/templates/simulation.html
@@ -22,7 +22,10 @@
         </div> <!-- end of simulation_main_draw -->
     </div> <!-- end of simulation_draw -->
 
-    <div id="simulation_adjust">
+    <div class="blackglass" id="simulation_adjust">
+        <div class="ui button toolbar">
+            <i class="arrow up big icon"></i>
+        </div>
         <div id="simulation_circuit">
             <div class="ui teal inverted menu"></div>
             <div id="simulation_circuit_main">
