--- a/server/static/css/shape.css
+++ b/server/static/css/shape.css
@@ -67,7 +67,8 @@ width:100%;}
     height:200px;
     position:fixed;
     top:100px;
-    right:10px;
+    right:30px;
+    width:3px;
     background-color:rgba(0, 0, 0, 0.9);
 }
 
@@ -76,7 +77,8 @@ width:100%;}
 }
 
 #slider > span {
-    background-color:rgba(255, 0, 0, 0.5)!important;
+    background-color:red!important;
+    border-radius:5px;
 }
 
 #slider > span:focus {
@@ -99,7 +101,7 @@ width:100%;}
     position:relative;
     height:150px;
     width:90%;
-    margin:50px auto 50px auto;
+    margin:20px auto;
     /*padding:30px;
     padding-left:0;*/
     float:center;
@@ -115,18 +117,9 @@ width:100%;}
     overflow-y:hidden;
 }
 
-.title {
-    font-size:30px;
-    text-align:center;
-}
-
 .part-container > div {
     width:0px;
     height:90%;
-}
-
-.ui.ribbon.label.title {
-    border-color:#E8E8E8 !important;
 }
 
 #information {
