--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -87,6 +87,29 @@
                 </div>
             </div>
         </div>
+        <div class="ui basic small modal" id="nodata">
+        <div class="header">
+            Warning
+        </div>
+        <div class="content">
+            <div class="left">
+                <i class="massive warning icon"></i>
+            </div>
+            <div class="right">
+                <p id="warnmessage">
+                Sorry! Can't get the circuits data. Please design circuits first in the page Design.
+                </p>
+            </div>
+        </div>
+        <div class="actions">
+            <div class="one fluid ui buttons"> 
+                <div class="ui negative right labeled icon button">
+                    OK
+                    <i class="checkmark icon"></i>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
     <script src="../static/js/jquery-2.0.3.min.js"></script>
     <script src="../static/js/jquery-ui.min.js"></script>
