--- a/server/static/css/circuit.css
+++ b/server/static/css/circuit.css
@@ -291,6 +291,10 @@ body {
     width:400px;
 }
 
+i.search {
+    color:gray;
+}
+
 .search > input {
     background-color:rgba(0, 0, 0, 0.5)!important;
     color:white!important;
