--- a/server/static/css/shape.css
+++ b/server/static/css/shape.css
@@ -107,14 +107,19 @@ width:100%;}
     float:center;
     background-color: rgba(95, 200, 201, 0.1);
     overflow:hidden;
+    padding-left:0;
 }
 
 .part-container {
-    width:90%;
+    width:80%;
     height:100px;
     margin:10px 0 auto 0px;
     float:right;
     overflow-y:hidden;
+}
+
+.title {
+    width:142px;
 }
 
 .part-container > div {
