--- a/server/templates/shape.html
+++ b/server/templates/shape.html
@@ -76,7 +76,7 @@
                 <div class="center">
                     <div class="ui segment container">
                         <div class="ui segment part"><div class="part-container"><div id="input"></div></div><div class="ui red label title">Input</div></div>
-                        <div class="ui segment part"><div class="part-container"><div id="gene"></div></div><div class="ui red label title">Gene</div></div>
+                        <div class="ui segment part"><div class="part-container"><div id="gene"></div></div><div class="ui red label title">Modular circuit</div></div>
                         <div class="ui segment part"><div class="part-container"><div id="output"></div></div><div class="ui red label title">Output</div></div>
                     </div>
                 </div>
