--- a/server/templates/shape.html
+++ b/server/templates/shape.html
@@ -43,22 +43,8 @@
                             <div id="dna_content">
                             </div> <!-- end of dna_content -->
                         </div> <!-- end of dna_main -->
-                        <div id="dna_aside">
-                            <button type="button" class="ui teal button">Export</button>
-                            <button type="button" id="comment_button" class="ui teal button">Comment</button>
-                        </div> <!-- end of dna_aside -->
+                        <div class="ui inverted basic button" id="showNewDna"><i class="align justify icon"></i></div>
                     </div> <!-- end of dna_container -->
-                    <!--modal box-->
-                    <div class="ui segment blackglass" id="dna_modal_box">
-                        <div>
-                            <i class="remove icon"></i>
-                            <p>21-8-2014 at: 19:32:49</p>
-                            <!--i class="trash icon"></i-->
-                        </div>
-                        <div class="ui input">
-                            <input type="text" placeholder="scott">
-                        </div>
-                    </div> <!-- end of dna_modal_box -->
                 </div>
             </div>
         </div>
