--- a/server/templates/simulation.html
+++ b/server/templates/simulation.html
@@ -151,10 +151,10 @@
             <div id="dynamic_adjust_box">
                 <h3>time interval</h3>
                 <div id="dynamic_adjust_input" class="input_range">
-                    <span>20 min</span>
-                    <input class="adjust_input" type="range" min="20" max="200" step="20" value="60" name="timeInterval" />
-                    <output for="timeInterval">60 min</output>
-                    <span>200 min</span>
+                    <span>20 sec</span>
+                    <input class="adjust_input" type="range" min="20" max="600" step="20" value="60" name="timeInterval" />
+                    <output for="timeInterval">60 sec</output>
+                    <span>600 sec</span>
                 </div>
             </div> <!-- end of dynamic_adjust_box -->
         </div> <!-- end of right -->
