--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -132,7 +132,7 @@ a.dock-item2 {
 /* css of scrollbar. */
 ::-webkit-scrollbar {
   width: 8px;
-  height: 8px;
+  height: 0;
   background-color: transparent;
   border: none;
   border-radius: 5px;
