--- a/server/templates/shape.html
+++ b/server/templates/shape.html
@@ -20,7 +20,7 @@
     <div class="ui button" name="vector">Vector</div>
     <div class="ui button" name="dna">DNA</div>
 </div>
-<div id="slider"><i></i><i></i></div>
+<div id="slider"><i class="large expand icon"></i><i class="large collapse icon"></i></div>
 <div class="ui basic modal" id="progress">
     <div class="content">
         <div class="center">
