--- a/server/static/css/help.css
+++ b/server/static/css/help.css
@@ -22,7 +22,7 @@
     padding-top:50px;
 }
 
-#procedure {
+#help {
     width:1200px;
     height:555px;
 }
@@ -58,14 +58,6 @@ p{
     margin-right:20px;
 }
 
-.image{
-    position:relative;
-    height:30%;
-    width:50%;
-    /*border:5px #407279 solid;*/
-    margin-left:5px;
-    margin-right:5px;
-    margin-top:5px;
-    margin-bottom:5px;
-    /*background-color:#f5f5f5;*/
+img {
+    max-width:600px;
 }
