--- a/server/static/css/shape.css
+++ b/server/static/css/shape.css
@@ -67,7 +67,7 @@ width:100%;}
     height:200px;
     position:fixed;
     top:100px;
-    right:30px;
+    right:50px;
     width:3px;
     background-color:rgba(0, 0, 0, 0.9);
 }
@@ -79,10 +79,23 @@ width:100%;}
 #slider > span {
     background-color:red!important;
     border-radius:5px;
+    left:-.45em;
 }
 
 #slider > span:focus {
     outline:none;
+}
+
+#slider > i.expand {
+    position:absolute;
+    left:calc(3px / 2 - 1.23em / 2);
+    top:-1.3em;
+}
+
+#slider > i.collapse {
+    position:absolute;
+    left:calc(3px / 2 - 1.23em / 2);
+    bottom:-1.3em;
 }
 
 #devices {
